[package]
name = "rust-wasm-test"
version = "0.1.0"
authors = ["dev <13297470+tscr00@users.noreply.github.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.13"

[profile.release]
# Include function names in the `.wasm` for better debugging and
# profiling. Comment this out if you're trying to create the smallest `.wasm`
# binaries you can.
debug = true
